post comments created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
   </head>
 
   <body>
+    <%= render "layouts/navbar" %>
+
     <div class="container">
-      <%= render "navbar" %>
       <%= yield %>
     </div>
   </body>
