--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container p-5">
-  <%= link_to "Log In", login_path, class: "nav-link" %>
+  <%= link_to "Log In with Google", login_path, class: "btn btn-primary login" %>
 </div>
