created home layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
-<div class="container p-5">
-  <%= link_to "Log In with Google", login_path, class: "btn btn-primary login" %>
+<div class="container p-5 text-center">
+  <span class="h1 font-weight-bold pt-3">Socio</span>
+  <div class="login">
+    <%= link_to "Log In with Google", login_path, class: "btn btn-primary" %>
+  </div>
 </div>
